@@ -60,7 +60,8 @@ class MorsAktivitetInnhenterTest {
         morsAktivitetInnhenter = new MorsAktivitetInnhenter(ytelseFordelingTjeneste, relatertBehandlingTjeneste, personopplysningTjeneste,
             abakusArbeidsforholdTjeneste, aktivitetskravArbeidRepository);
     }
-@Test
+
+    @Test
     void sjekk_at_mor_har_riktig_aktivitetskrav_info_første_gang() {
         var annenPartAktørId = AktørId.dummy();
         var fraDato = LocalDate.now().minusWeeks(1);
@@ -68,10 +69,13 @@ class MorsAktivitetInnhenterTest {
         var periode = DatoIntervallEntitet.fraOgMedTilOgMed(fraDato, tilDato);
         var førstegangScenario = ScenarioMorSøkerForeldrepenger.forFødsel().medBehandlingType(BehandlingType.FØRSTEGANGSSØKNAD);
         var behandling = førstegangScenario.lagMocked();
-        var perioderMedAktivitetskrav = List.of(lagOppgittPeriode(LocalDate.now().minusWeeks(1), LocalDate.now()), lagOppgittPeriode(LocalDate.now().plusWeeks(2), LocalDate.now().plusWeeks(4)));
+        var perioderMedAktivitetskrav = List.of(lagOppgittPeriode(LocalDate.now().minusWeeks(1), LocalDate.now()),
+            lagOppgittPeriode(LocalDate.now().plusWeeks(2), LocalDate.now().plusWeeks(4)));
         var aktivitetsavtaler = List.of(lagAktivitetsavtale(periode, BigDecimal.valueOf(100)));
 
-        var arbeidsforholdMedPermisjon = List.of(lagArbeidsforholdMedPermisjon(Arbeidsgiver.virksomhet("999999999"), EksternArbeidsforholdRef.ref("01"), aktivitetsavtaler, Collections.emptyList()));
+        var arbeidsforholdMedPermisjon = List.of(
+            lagArbeidsforholdMedPermisjon(Arbeidsgiver.virksomhet("999999999"), EksternArbeidsforholdRef.ref("01"), aktivitetsavtaler,
+                Collections.emptyList()));
 
         when(abakusArbeidsforholdTjeneste.hentArbeidsforholdInfoForEnPeriode(any(), any(), any(), any())).thenReturn(arbeidsforholdMedPermisjon);
 
@@ -89,7 +93,8 @@ class MorsAktivitetInnhenterTest {
         var annenPartAktørId = AktørId.dummy();
         var førstegangScenario = ScenarioMorSøkerForeldrepenger.forFødsel().medBehandlingType(BehandlingType.FØRSTEGANGSSØKNAD);
         var behandling = førstegangScenario.lagMocked();
-        var perioderMedAktivitetskrav = List.of(lagOppgittPeriode(LocalDate.now().minusWeeks(1), LocalDate.now()), lagOppgittPeriode(LocalDate.now().plusWeeks(2), LocalDate.now().plusWeeks(4)));
+        var perioderMedAktivitetskrav = List.of(lagOppgittPeriode(LocalDate.now().minusWeeks(1), LocalDate.now()),
+            lagOppgittPeriode(LocalDate.now().plusWeeks(2), LocalDate.now().plusWeeks(4)));
 
         when(abakusArbeidsforholdTjeneste.hentArbeidsforholdInfoForEnPeriode(any(), any(), any(), any())).thenReturn(Collections.emptyList());
 
@@ -105,10 +110,12 @@ class MorsAktivitetInnhenterTest {
         var førstegangScenario = ScenarioMorSøkerForeldrepenger.forFødsel().medBehandlingType(BehandlingType.FØRSTEGANGSSØKNAD);
         var behandling = førstegangScenario.lagMocked();
         var virksomhet = Arbeidsgiver.virksomhet("999999999");
-        var perioderMedAktivitetskrav = List.of(lagOppgittPeriode(LocalDate.now().minusWeeks(1), LocalDate.now()), lagOppgittPeriode(LocalDate.now().plusWeeks(2), LocalDate.now().plusWeeks(4)));
+        var perioderMedAktivitetskrav = List.of(lagOppgittPeriode(LocalDate.now().minusWeeks(1), LocalDate.now()),
+            lagOppgittPeriode(LocalDate.now().plusWeeks(2), LocalDate.now().plusWeeks(4)));
         var aktivitetsavtaler = List.of(lagAktivitetsavtale(periode, BigDecimal.valueOf(100)));
 
-        var arbeidsforholdMedPermisjon = List.of(lagArbeidsforholdMedPermisjon(virksomhet, EksternArbeidsforholdRef.ref("01"), aktivitetsavtaler, Collections.emptyList()));
+        var arbeidsforholdMedPermisjon = List.of(
+            lagArbeidsforholdMedPermisjon(virksomhet, EksternArbeidsforholdRef.ref("01"), aktivitetsavtaler, Collections.emptyList()));
 
         when(abakusArbeidsforholdTjeneste.hentArbeidsforholdInfoForEnPeriode(any(), any(), any(), any())).thenReturn(arbeidsforholdMedPermisjon);
 
@@ -121,11 +128,12 @@ class MorsAktivitetInnhenterTest {
         assertThat(aktivitetPeriodeEntitetListe).hasSize(1);
         assertThat(aktivitetPeriodeEntitetListe.stream()
             .map(aktPeriode -> aktPeriode.getSumStillingsprosent().getVerdi())
-            .reduce(BigDecimal::add).orElse(BigDecimal.ZERO)).isEqualTo(BigDecimal.valueOf(100));
+            .reduce(BigDecimal::add)
+            .orElse(BigDecimal.ZERO)).isEqualTo(BigDecimal.valueOf(100));
     }
 
     @Test
-    void sjekk_at_forrige_innhentingsfradato_opprettholdes_når_nye_aktivitetskrav_perioder_er_senere(){
+    void sjekk_at_forrige_innhentingsfradato_opprettholdes_når_nye_aktivitetskrav_perioder_er_senere() {
         var annenPartAktørId = AktørId.dummy();
         var virksomhet = Arbeidsgiver.virksomhet("999999999");
 
@@ -141,16 +149,18 @@ class MorsAktivitetInnhenterTest {
         //forrige aktivitetsgrunnlag
         var grunnlagsFraDato = LocalDate.now().minusWeeks(4);
         var grunnlagsTilDato = LocalDate.now();
-        var perioder = List.of(lagAktvitetskravArbeidPeriode(grunnlagsFraDato, grunnlagsTilDato, BigDecimal.valueOf(100),  virksomhet.getOrgnr()));
+        var perioder = List.of(lagAktvitetskravArbeidPeriode(grunnlagsFraDato, grunnlagsTilDato, BigDecimal.valueOf(100), virksomhet.getOrgnr()));
         var aktvitetskravPerioder = lagPerioderBUilder(perioder);
         var gjeldendeAktivitetsgrunnlag = lagAktivitetsgrunnlag(behandling.getId(), grunnlagsFraDato, grunnlagsTilDato, aktvitetskravPerioder);
 
-        var arbeidsforholdMedPermisjon = List.of(lagArbeidsforholdMedPermisjon(virksomhet, EksternArbeidsforholdRef.ref("01"), aktivitetsavtaler, Collections.emptyList()));
+        var arbeidsforholdMedPermisjon = List.of(
+            lagArbeidsforholdMedPermisjon(virksomhet, EksternArbeidsforholdRef.ref("01"), aktivitetsavtaler, Collections.emptyList()));
 
         when(abakusArbeidsforholdTjeneste.hentArbeidsforholdInfoForEnPeriode(any(), any(), any(), any())).thenReturn(arbeidsforholdMedPermisjon);
 
 
-        var morAktivitet = morsAktivitetInnhenter.finnMorsAktivitet(behandling, perioderMedAktivitetskrav, annenPartAktørId, Optional.of(gjeldendeAktivitetsgrunnlag));
+        var morAktivitet = morsAktivitetInnhenter.finnMorsAktivitet(behandling, perioderMedAktivitetskrav, annenPartAktørId,
+            Optional.of(gjeldendeAktivitetsgrunnlag));
         var aktivitetPeriodeEntitetListe = morAktivitet.perioderEntitet().getAktivitetskravArbeidPeriodeListe();
 
 
@@ -160,7 +170,7 @@ class MorsAktivitetInnhenterTest {
     }
 
     @Test
-    void sjekk_at_fradato_fra_ny_aktivitetskravperiode_velges_når_den_er_før_forrige_grunnlagsfradato(){
+    void sjekk_at_fradato_fra_ny_aktivitetskravperiode_velges_når_den_er_før_forrige_grunnlagsfradato() {
         var annenPartAktørId = AktørId.dummy();
         var virksomhet = Arbeidsgiver.virksomhet("999999999");
 
@@ -176,16 +186,18 @@ class MorsAktivitetInnhenterTest {
         //forrige aktivitetsgrunnlag
         var grunnlagsFraDato = LocalDate.now().plusWeeks(1);
         var grunnlagsTilDato = LocalDate.now().plusWeeks(3);
-        var perioder = List.of(lagAktvitetskravArbeidPeriode(grunnlagsFraDato, grunnlagsTilDato, BigDecimal.valueOf(100),  virksomhet.getOrgnr()));
+        var perioder = List.of(lagAktvitetskravArbeidPeriode(grunnlagsFraDato, grunnlagsTilDato, BigDecimal.valueOf(100), virksomhet.getOrgnr()));
         var aktvitetskravPerioder = lagPerioderBUilder(perioder);
         var gjeldendeAktivitetsgrunnlag = lagAktivitetsgrunnlag(behandling.getId(), grunnlagsFraDato, grunnlagsTilDato, aktvitetskravPerioder);
 
-        var arbeidsforholdMedPermisjon = List.of(lagArbeidsforholdMedPermisjon(virksomhet, EksternArbeidsforholdRef.ref("01"), aktivitetsavtaler, Collections.emptyList()));
+        var arbeidsforholdMedPermisjon = List.of(
+            lagArbeidsforholdMedPermisjon(virksomhet, EksternArbeidsforholdRef.ref("01"), aktivitetsavtaler, Collections.emptyList()));
 
         when(abakusArbeidsforholdTjeneste.hentArbeidsforholdInfoForEnPeriode(any(), any(), any(), any())).thenReturn(arbeidsforholdMedPermisjon);
 
 
-        var morAktivitet = morsAktivitetInnhenter.finnMorsAktivitet(behandling, perioderMedAktivitetskrav, annenPartAktørId, Optional.of(gjeldendeAktivitetsgrunnlag));
+        var morAktivitet = morsAktivitetInnhenter.finnMorsAktivitet(behandling, perioderMedAktivitetskrav, annenPartAktørId,
+            Optional.of(gjeldendeAktivitetsgrunnlag));
         var aktivitetPeriodeEntitetListe = morAktivitet.perioderEntitet().getAktivitetskravArbeidPeriodeListe();
 
 
@@ -195,7 +207,7 @@ class MorsAktivitetInnhenterTest {
     }
 
     @Test
-    void sjekk_at_det_innhentes_på_nytt_for_samme_periode_når_mor_har_et_aktvitetsgrunnlag_og_ingen_nye_aktivitskravperioder(){
+    void sjekk_at_det_innhentes_på_nytt_for_samme_periode_når_mor_har_et_aktvitetsgrunnlag_og_ingen_nye_aktivitskravperioder() {
         var annenPartAktørId = AktørId.dummy();
         var virksomhet = Arbeidsgiver.virksomhet("999999999");
 
@@ -210,16 +222,18 @@ class MorsAktivitetInnhenterTest {
         //forrige aktivitetsgrunnlag
         var grunnlagsFraDato = LocalDate.now().minusWeeks(2);
         var grunnlagsTilDato = LocalDate.now().plusWeeks(2);
-        var perioder = List.of(lagAktvitetskravArbeidPeriode(grunnlagsFraDato, grunnlagsTilDato, BigDecimal.valueOf(100),  virksomhet.getOrgnr()));
+        var perioder = List.of(lagAktvitetskravArbeidPeriode(grunnlagsFraDato, grunnlagsTilDato, BigDecimal.valueOf(100), virksomhet.getOrgnr()));
         var aktvitetskravPerioder = lagPerioderBUilder(perioder);
         var gjeldendeAktivitetsgrunnlag = lagAktivitetsgrunnlag(behandling.getId(), grunnlagsFraDato, grunnlagsTilDato, aktvitetskravPerioder);
 
-        var arbeidsforholdMedPermisjon = List.of(lagArbeidsforholdMedPermisjon(virksomhet, EksternArbeidsforholdRef.ref("01"), aktivitetsavtaler, Collections.emptyList()));
+        var arbeidsforholdMedPermisjon = List.of(
+            lagArbeidsforholdMedPermisjon(virksomhet, EksternArbeidsforholdRef.ref("01"), aktivitetsavtaler, Collections.emptyList()));
 
         when(abakusArbeidsforholdTjeneste.hentArbeidsforholdInfoForEnPeriode(any(), any(), any(), any())).thenReturn(arbeidsforholdMedPermisjon);
 
 
-        var morAktivitet = morsAktivitetInnhenter.finnMorsAktivitet(behandling, List.of(), annenPartAktørId, Optional.of(gjeldendeAktivitetsgrunnlag));
+        var morAktivitet = morsAktivitetInnhenter.finnMorsAktivitet(behandling, List.of(), annenPartAktørId,
+            Optional.of(gjeldendeAktivitetsgrunnlag));
         var aktivitetPeriodeEntitetListe = morAktivitet.perioderEntitet().getAktivitetskravArbeidPeriodeListe();
 
 
@@ -235,17 +249,21 @@ class MorsAktivitetInnhenterTest {
         var orgnr2 = Arbeidsgiver.virksomhet("888888888");
         var innhentingsperiodeFraDato = LocalDate.now().minusWeeks(1);
         var innhentingsperiodeTilDato = LocalDate.now().plusWeeks(4);
-        var aktivitetsavtalePeriode = DatoIntervallEntitet.fraOgMedTilOgMed(innhentingsperiodeFraDato.minusWeeks(1), innhentingsperiodeTilDato.minusWeeks(2));
-        var aktivitetsavtalePeriode2 = DatoIntervallEntitet.fraOgMedTilOgMed(innhentingsperiodeTilDato.minusWeeks(2).plusDays(1), innhentingsperiodeTilDato);
+        var aktivitetsavtalePeriode = DatoIntervallEntitet.fraOgMedTilOgMed(innhentingsperiodeFraDato.minusWeeks(1),
+            innhentingsperiodeTilDato.minusWeeks(2));
+        var aktivitetsavtalePeriode2 = DatoIntervallEntitet.fraOgMedTilOgMed(innhentingsperiodeTilDato.minusWeeks(2).plusDays(1),
+            innhentingsperiodeTilDato);
         var førstegangScenario = ScenarioMorSøkerForeldrepenger.forFødsel().medBehandlingType(BehandlingType.FØRSTEGANGSSØKNAD);
         var behandling = førstegangScenario.lagMocked();
-        var perioderMedAktivitetskrav = List.of(lagOppgittPeriode(LocalDate.now().minusWeeks(1), LocalDate.now()), lagOppgittPeriode(LocalDate.now().plusWeeks(2), LocalDate.now().plusWeeks(4)));
+        var perioderMedAktivitetskrav = List.of(lagOppgittPeriode(LocalDate.now().minusWeeks(1), LocalDate.now()),
+            lagOppgittPeriode(LocalDate.now().plusWeeks(2), LocalDate.now().plusWeeks(4)));
         var aktivitetsavtaler1 = List.of(lagAktivitetsavtale(aktivitetsavtalePeriode, BigDecimal.valueOf(55)));
         var aktivitetsavtaler2 = List.of(lagAktivitetsavtale(aktivitetsavtalePeriode2, BigDecimal.valueOf(25)));
         var permisjoner = List.of(lagPermisjon(aktivitetsavtalePeriode2, BigDecimal.valueOf(20)));
 
-        var arbeidsforholdMedPermisjon = List.of(lagArbeidsforholdMedPermisjon(orgnr1, EksternArbeidsforholdRef.ref("01"), aktivitetsavtaler1, permisjoner),
-            lagArbeidsforholdMedPermisjon(orgnr2, EksternArbeidsforholdRef.nullRef(), aktivitetsavtaler2, Collections.emptyList() ));
+        var arbeidsforholdMedPermisjon = List.of(
+            lagArbeidsforholdMedPermisjon(orgnr1, EksternArbeidsforholdRef.ref("01"), aktivitetsavtaler1, permisjoner),
+            lagArbeidsforholdMedPermisjon(orgnr2, EksternArbeidsforholdRef.nullRef(), aktivitetsavtaler2, Collections.emptyList()));
 
         when(abakusArbeidsforholdTjeneste.hentArbeidsforholdInfoForEnPeriode(any(), any(), any(), any())).thenReturn(arbeidsforholdMedPermisjon);
 
@@ -257,31 +275,34 @@ class MorsAktivitetInnhenterTest {
         assertThat(morAktivitet.tilDato()).isEqualTo(innhentingsperiodeTilDato.plusWeeks(2));
         assertThat(aktivitetPeriodeEntitetListe).hasSize(7);
 
-        assertThat(aktivitetPeriodeEntitetListe.stream()
-            .filter(aktPeriode -> aktPeriode.getOrgNummer().getId().equals(orgnr1.getOrgnr())).toList()).hasSize(4);
-        assertThat(aktivitetPeriodeEntitetListe.stream()
-            .filter(aktPeriode -> aktPeriode.getOrgNummer().getId().equals(orgnr1.getOrgnr())))
-            .anyMatch(periode -> periode.getSumStillingsprosent().getVerdi().equals(BigDecimal.valueOf(55)));
-        assertThat(aktivitetPeriodeEntitetListe.stream()
-            .filter(aktPeriode -> aktPeriode.getOrgNummer().getId().equals(orgnr1.getOrgnr())))
-            .anyMatch(periode -> periode.getSumPermisjonsprosent().getVerdi().equals(BigDecimal.valueOf(20)));
-        assertThat(aktivitetPeriodeEntitetListe.stream()
-            .filter(aktPeriode -> aktPeriode.getOrgNummer().getId().equals(orgnr2.getOrgnr())))
-            .anyMatch(periode -> periode.getSumStillingsprosent().getVerdi().equals(BigDecimal.valueOf(25)));
+        assertThat(
+            aktivitetPeriodeEntitetListe.stream().filter(aktPeriode -> aktPeriode.getOrgNummer().getId().equals(orgnr1.getOrgnr())).toList()).hasSize(
+            4);
+        assertThat(aktivitetPeriodeEntitetListe.stream().filter(aktPeriode -> aktPeriode.getOrgNummer().getId().equals(orgnr1.getOrgnr()))).anyMatch(
+            periode -> periode.getSumStillingsprosent().getVerdi().equals(BigDecimal.valueOf(55)));
+        assertThat(aktivitetPeriodeEntitetListe.stream().filter(aktPeriode -> aktPeriode.getOrgNummer().getId().equals(orgnr1.getOrgnr()))).anyMatch(
+            periode -> periode.getSumPermisjonsprosent().getVerdi().equals(BigDecimal.valueOf(20)));
+        assertThat(aktivitetPeriodeEntitetListe.stream().filter(aktPeriode -> aktPeriode.getOrgNummer().getId().equals(orgnr2.getOrgnr()))).anyMatch(
+            periode -> periode.getSumStillingsprosent().getVerdi().equals(BigDecimal.valueOf(25)));
         assertThat(aktivitetPeriodeEntitetListe.stream()
             .filter(aktPeriode -> aktPeriode.getOrgNummer().getId().equals(orgnr2.getOrgnr()))
             .map(periode -> periode.getSumPermisjonsprosent().getVerdi())
-            .reduce(BigDecimal::add).orElse(BigDecimal.ZERO)).isEqualTo(BigDecimal.ZERO);
-        assertThat(aktivitetPeriodeEntitetListe.stream()
-            .filter(aktPeriode -> aktPeriode.getOrgNummer().getId().equals(orgnr2.getOrgnr())).toList()).hasSize(3);
+            .reduce(BigDecimal::add)
+            .orElse(BigDecimal.ZERO)).isEqualTo(BigDecimal.ZERO);
+        assertThat(
+            aktivitetPeriodeEntitetListe.stream().filter(aktPeriode -> aktPeriode.getOrgNummer().getId().equals(orgnr2.getOrgnr())).toList()).hasSize(
+            3);
     }
 
     private ArbeidsforholdTjeneste.Permisjon lagPermisjon(DatoIntervallEntitet periode, BigDecimal permisjonsprosent) {
         return new ArbeidsforholdTjeneste.Permisjon(periode, PermisjonsbeskrivelseType.ANNEN_PERMISJON_LOVFESTET, permisjonsprosent);
     }
 
-    private ArbeidsforholdMedPermisjon lagArbeidsforholdMedPermisjon(Arbeidsgiver arbeidsgiver, EksternArbeidsforholdRef ref, List<ArbeidsforholdTjeneste.AktivitetAvtale> aktivitetsavtaler, List<ArbeidsforholdTjeneste.Permisjon> permisjoner) {
-        return new ArbeidsforholdMedPermisjon(arbeidsgiver, ArbeidType.ORDINÆRT_ARBEIDSFORHOLD, ref, aktivitetsavtaler, permisjoner );
+    private ArbeidsforholdMedPermisjon lagArbeidsforholdMedPermisjon(Arbeidsgiver arbeidsgiver,
+                                                                     EksternArbeidsforholdRef ref,
+                                                                     List<ArbeidsforholdTjeneste.AktivitetAvtale> aktivitetsavtaler,
+                                                                     List<ArbeidsforholdTjeneste.Permisjon> permisjoner) {
+        return new ArbeidsforholdMedPermisjon(arbeidsgiver, ArbeidType.ORDINÆRT_ARBEIDSFORHOLD, ref, aktivitetsavtaler, permisjoner);
     }
 
     private ArbeidsforholdTjeneste.AktivitetAvtale lagAktivitetsavtale(DatoIntervallEntitet periode, BigDecimal stillingsprosent) {
@@ -296,7 +317,10 @@ class MorsAktivitetInnhenterTest {
             .build();
     }
 
-    private AktivitetskravGrunnlagEntitet lagAktivitetsgrunnlag(Long behandlingId, LocalDate fra, LocalDate til, AktivitetskravArbeidPerioderEntitet perioderEntitet) {
+    private AktivitetskravGrunnlagEntitet lagAktivitetsgrunnlag(Long behandlingId,
+                                                                LocalDate fra,
+                                                                LocalDate til,
+                                                                AktivitetskravArbeidPerioderEntitet perioderEntitet) {
         return AktivitetskravGrunnlagEntitet.Builder.nytt()
             .medBehandlingId(behandlingId)
             .medPeriode(fra, til)
@@ -310,7 +334,10 @@ class MorsAktivitetInnhenterTest {
         return builder.build();
     }
 
-    private AktivitetskravArbeidPeriodeEntitet.Builder lagAktvitetskravArbeidPeriode(LocalDate fra, LocalDate til, BigDecimal stillingsprosent, String orgnr) {
+    private AktivitetskravArbeidPeriodeEntitet.Builder lagAktvitetskravArbeidPeriode(LocalDate fra,
+                                                                                     LocalDate til,
+                                                                                     BigDecimal stillingsprosent,
+                                                                                     String orgnr) {
         return new AktivitetskravArbeidPeriodeEntitet.Builder().medPeriode(fra, til)
             .medOrgNummer(orgnr)
             .medSumPermisjonsprosent(BigDecimal.ZERO)
